// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | FormField Default 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="unique-id-1"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <div
    style={
      Object {
        "background": "aqua",
      }
    }
  >
    Pass in any children you want
  </div>
</div>
`;

exports[`Storyshots Molecules | FormField Docs 1`] = `
<p>
  This component provides a label including the required look of the label. It also provides the displaying of error message and additional information.
</p>
`;

exports[`Storyshots Molecules | FormField Error 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="unique-id-2"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <div
    style={
      Object {
        "background": "aqua",
      }
    }
  >
    Pass in any children you want
  </div>
  <div>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hPnwKK"
    >
      <div
        className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
      >
        Error: 
      </div>
      error
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | FormField Extra info 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="unique-id-2"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
    </span>
  </label>
  <div
    style={
      Object {
        "background": "aqua",
      }
    }
  >
    Pass in any children you want
  </div>
  <div>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 WSuqZ"
    >
      Some extra info
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | FormField Required 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="unique-id-1"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label *
      </div>
    </span>
  </label>
  <div
    style={
      Object {
        "background": "aqua",
      }
    }
  >
    Pass in any children you want
  </div>
</div>
`;

exports[`Storyshots Molecules | FormField With group of items 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <fieldset
    className="Fieldset__StyledFieldset-sc-1fwvu26-0 GQPdY"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
    >
      <legend
        className="NormalizedLegend__Legend-sc-1svgb20-0 Legend__StyledLegendAsLabel-x6z4g1-1 jtzsJR FormLabel__StyledLabel-skax1c-0 VHIlu"
        hidden={false}
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
        >
          Caption to a group of items 
        </span>
      </legend>
    </div>
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hEIiGr"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <div
          style={
            Object {
              "background": "aqua",
            }
          }
        >
          Pass in any children you want
        </div>
      </div>
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <div
          style={
            Object {
              "background": "aqua",
            }
          }
        >
          Pass in any children you want
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Molecules | FormField With label tooltip 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="unique-id-1"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
        <svg
          aria-hidden="false"
          className="IconBase__StyledIconBase-sc-10cbji3-0 cpMDhR FormField__TooltipIcon-ydn0fr-1 ioayVJ"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 24 24"
        >
          <g
            fillRule="evenodd"
            transform="translate(1 1)"
          >
            <circle
              className="Questionmark__StyledCircle-sc-1uxskjf-0 gHSezF"
              cx="11"
              cy="11"
              fill="none"
              r="11"
            />
            <path
              d="M9.4544,13.5528 L9.4544,13.3008 C9.4544,12.1584 9.4376,11.6376 11.1512,10.2432 C11.8904,9.6384 12.4784,9.2184 12.4784,8.496 C12.4784,7.8576 12.0248,7.3536 11.1176,7.3536 C10.1768,7.3536 9.656,7.9416 9.4376,8.6472 L6.9008,8.6472 C7.2368,6.3624 8.9504,5.1696 11.168,5.1696 C13.5032,5.1696 15.0992,6.4128 15.0992,8.3784 C15.0992,9.6888 14.5448,10.3776 13.0496,11.6544 C12.344,12.2424 11.84,12.6456 11.7056,13.3008 L11.6552,13.5528 L9.4544,13.5528 Z M11.9072,14.7288 L11.9072,17.4 L9.2696,17.4 L9.2696,14.7288 L11.9072,14.7288 Z"
              fillRule="nonzero"
            />
          </g>
          <title>
            Tooltip content
          </title>
        </svg>
      </div>
    </span>
  </label>
  <div
    style={
      Object {
        "background": "aqua",
      }
    }
  >
    Pass in any children you want
  </div>
</div>
`;
